tests/transpiler/x/cpp/group_by_conditional_sum.error
compile: exit status 1
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:24:5: error: non-static data member declared with placeholder ‘auto’
   24 |     auto share;
      |     ^~~~
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:35:95: error: template argument 1 is invalid
   35 |     __items.push_back(ResultItem{.cat = g.key, .share = (std::accumulate(([]{ std::vector<auto> __items;
      |                                                                                               ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:35:95: error: template argument 2 is invalid
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:36:15: error: ‘g’ is not captured
   36 | for (auto x : g) {
      |               ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:35:76: note: the lambda has no capture-default
   35 |     __items.push_back(ResultItem{.cat = g.key, .share = (std::accumulate(([]{ std::vector<auto> __items;
      |                                                                            ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:34:12: note: ‘GGroup g’ declared here
   34 |     GGroup g{__kv.first, __kv.second};
      |            ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:37:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   37 |         __items.push_back((x.flag ? x.val : 0));
      |                 ^~~~~~~~~
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:39:22: error: request for member ‘begin’ in ‘<lambda closure object><lambda()>::<lambda()>().<lambda()>::<lambda()>()’, which is of non-class type ‘int’
   39 | return __items; }()).begin(), ([]{ std::vector<auto> __items;
      |                      ^~~~~
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:39:52: error: template argument 1 is invalid
   39 | return __items; }()).begin(), ([]{ std::vector<auto> __items;
      |                                                    ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:39:52: error: template argument 2 is invalid
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:40:15: error: ‘g’ is not captured
   40 | for (auto x : g) {
      |               ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:39:33: note: the lambda has no capture-default
   39 | return __items; }()).begin(), ([]{ std::vector<auto> __items;
      |                                 ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:34:12: note: ‘GGroup g’ declared here
   34 |     GGroup g{__kv.first, __kv.second};
      |            ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:41:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   41 |         __items.push_back((x.flag ? x.val : 0));
      |                 ^~~~~~~~~
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:43:22: error: request for member ‘end’ in ‘<lambda closure object><lambda()>::<lambda()>().<lambda()>::<lambda()>()’, which is of non-class type ‘int’
   43 | return __items; }()).end(), 0) / std::accumulate(([]{ std::vector<auto> __items;
      |                      ^~~
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:43:71: error: template argument 1 is invalid
   43 | return __items; }()).end(), 0) / std::accumulate(([]{ std::vector<auto> __items;
      |                                                                       ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:43:71: error: template argument 2 is invalid
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:44:15: error: ‘g’ is not captured
   44 | for (auto x : g) {
      |               ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:43:52: note: the lambda has no capture-default
   43 | return __items; }()).end(), 0) / std::accumulate(([]{ std::vector<auto> __items;
      |                                                    ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:34:12: note: ‘GGroup g’ declared here
   34 |     GGroup g{__kv.first, __kv.second};
      |            ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:45:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   45 |         __items.push_back(x.val);
      |                 ^~~~~~~~~
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:47:22: error: request for member ‘begin’ in ‘<lambda closure object><lambda()>::<lambda()>().<lambda()>::<lambda()>()’, which is of non-class type ‘int’
   47 | return __items; }()).begin(), ([]{ std::vector<auto> __items;
      |                      ^~~~~
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:47:52: error: template argument 1 is invalid
   47 | return __items; }()).begin(), ([]{ std::vector<auto> __items;
      |                                                    ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:47:52: error: template argument 2 is invalid
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:48:15: error: ‘g’ is not captured
   48 | for (auto x : g) {
      |               ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:47:33: note: the lambda has no capture-default
   47 | return __items; }()).begin(), ([]{ std::vector<auto> __items;
      |                                 ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:34:12: note: ‘GGroup g’ declared here
   34 |     GGroup g{__kv.first, __kv.second};
      |            ^
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:49:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   49 |         __items.push_back(x.val);
      |                 ^~~~~~~~~
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:51:22: error: request for member ‘end’ in ‘<lambda closure object><lambda()>::<lambda()>().<lambda()>::<lambda()>()’, which is of non-class type ‘int’
   51 | return __items; }()).end(), 0))});
      |                      ^~~
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp: In function ‘int main()’:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:33: error: no match for ‘operator<<’ (operand types are ‘std::basic_ostream<char>::__ostream_type’ {aka ‘std::basic_ostream<char>’} and ‘std::vector<ResultItem>’)
   56 |     std::cout << std::boolalpha << result << std::endl;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^~ ~~~~~~
      |               |                    |
      |               |                    std::vector<ResultItem>
      |               std::basic_ostream<char>::__ostream_type {aka std::basic_ostream<char>}
In file included from /usr/include/c++/13/iostream:41,
                 from /workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:2:
/usr/include/c++/13/ostream:110:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(__ostream_type& (*)(__ostream_type&)) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  110 |       operator<<(__ostream_type& (*__pf)(__ostream_type&))
      |       ^~~~~~~~
/usr/include/c++/13/ostream:110:36: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘std::basic_ostream<char>::__ostream_type& (*)(std::basic_ostream<char>::__ostream_type&)’ {aka ‘std::basic_ostream<char>& (*)(std::basic_ostream<char>&)’}
  110 |       operator<<(__ostream_type& (*__pf)(__ostream_type&))
      |                  ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/ostream:119:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(__ios_type& (*)(__ios_type&)) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>; __ios_type = std::basic_ios<char>]’
  119 |       operator<<(__ios_type& (*__pf)(__ios_type&))
      |       ^~~~~~~~
/usr/include/c++/13/ostream:119:32: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘std::basic_ostream<char>::__ios_type& (*)(std::basic_ostream<char>::__ios_type&)’ {aka ‘std::basic_ios<char>& (*)(std::basic_ios<char>&)’}
  119 |       operator<<(__ios_type& (*__pf)(__ios_type&))
      |                  ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
/usr/include/c++/13/ostream:129:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(std::ios_base& (*)(std::ios_base&)) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  129 |       operator<<(ios_base& (*__pf) (ios_base&))
      |       ^~~~~~~~
/usr/include/c++/13/ostream:129:30: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘std::ios_base& (*)(std::ios_base&)’
  129 |       operator<<(ios_base& (*__pf) (ios_base&))
      |                  ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
/usr/include/c++/13/ostream:168:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  168 |       operator<<(long __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:168:23: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘long int’
  168 |       operator<<(long __n)
      |                  ~~~~~^~~
/usr/include/c++/13/ostream:172:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  172 |       operator<<(unsigned long __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:172:32: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘long unsigned int’
  172 |       operator<<(unsigned long __n)
      |                  ~~~~~~~~~~~~~~^~~
/usr/include/c++/13/ostream:176:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(bool) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  176 |       operator<<(bool __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:176:23: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘bool’
  176 |       operator<<(bool __n)
      |                  ~~~~~^~~
In file included from /usr/include/c++/13/ostream:880:
/usr/include/c++/13/bits/ostream.tcc:96:5: note: candidate: ‘std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(short int) [with _CharT = char; _Traits = std::char_traits<char>]’
   96 |     basic_ostream<_CharT, _Traits>::
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/ostream.tcc:97:22: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘short int’
   97 |     operator<<(short __n)
      |                ~~~~~~^~~
/usr/include/c++/13/ostream:183:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(short unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  183 |       operator<<(unsigned short __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:183:33: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘short unsigned int’
  183 |       operator<<(unsigned short __n)
      |                  ~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/ostream.tcc:110:5: note: candidate: ‘std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(int) [with _CharT = char; _Traits = std::char_traits<char>]’
  110 |     basic_ostream<_CharT, _Traits>::
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/ostream.tcc:111:20: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘int’
  111 |     operator<<(int __n)
      |                ~~~~^~~
/usr/include/c++/13/ostream:194:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  194 |       operator<<(unsigned int __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:194:31: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘unsigned int’
  194 |       operator<<(unsigned int __n)
      |                  ~~~~~~~~~~~~~^~~
/usr/include/c++/13/ostream:203:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long long int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  203 |       operator<<(long long __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:203:28: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘long long int’
  203 |       operator<<(long long __n)
      |                  ~~~~~~~~~~^~~
/usr/include/c++/13/ostream:207:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long long unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  207 |       operator<<(unsigned long long __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:207:37: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘long long unsigned int’
  207 |       operator<<(unsigned long long __n)
      |                  ~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/ostream:222:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(double) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  222 |       operator<<(double __f)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:222:25: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘double’
  222 |       operator<<(double __f)
      |                  ~~~~~~~^~~
/usr/include/c++/13/ostream:226:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(float) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  226 |       operator<<(float __f)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:226:24: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘float’
  226 |       operator<<(float __f)
      |                  ~~~~~~^~~
/usr/include/c++/13/ostream:234:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long double) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  234 |       operator<<(long double __f)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:234:30: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘long double’
  234 |       operator<<(long double __f)
      |                  ~~~~~~~~~~~~^~~
/usr/include/c++/13/ostream:292:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(const void*) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  292 |       operator<<(const void* __p)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:292:30: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘const void*’
  292 |       operator<<(const void* __p)
      |                  ~~~~~~~~~~~~^~~
/usr/include/c++/13/ostream:297:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(std::nullptr_t) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>; std::nullptr_t = std::nullptr_t]’
  297 |       operator<<(nullptr_t)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:297:18: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘std::nullptr_t’
  297 |       operator<<(nullptr_t)
      |                  ^~~~~~~~~
/usr/include/c++/13/bits/ostream.tcc:124:5: note: candidate: ‘std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(__streambuf_type*) [with _CharT = char; _Traits = std::char_traits<char>; __streambuf_type = std::basic_streambuf<char>]’
  124 |     basic_ostream<_CharT, _Traits>::
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/ostream.tcc:125:34: note:   no known conversion for argument 1 from ‘std::vector<ResultItem>’ to ‘std::basic_ostream<char>::__streambuf_type*’ {aka ‘std::basic_streambuf<char>*’}
  125 |     operator<<(__streambuf_type* __sbin)
      |                ~~~~~~~~~~~~~~~~~~^~~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40:
/usr/include/c++/13/string_view:761:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, basic_string_view<_CharT, _Traits>)’
  761 |     operator<<(basic_ostream<_CharT, _Traits>& __os,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:761:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   ‘std::vector<ResultItem>’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/bits/basic_string.h:4032:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 4032 |     operator<<(basic_ostream<_CharT, _Traits>& __os,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:4032:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   ‘std::vector<ResultItem>’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:38,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/cstddef:124:5: note: candidate: ‘template<class _IntegerType> constexpr std::__byte_op_t<_IntegerType> std::operator<<(byte, _IntegerType)’
  124 |     operator<<(byte __b, _IntegerType __shift) noexcept
      |     ^~~~~~~~
/usr/include/c++/13/cstddef:124:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:15: note:   cannot convert ‘std::cout.std::basic_ostream<char>::operator<<(std::boolalpha)’ (type ‘std::basic_ostream<char>::__ostream_type’ {aka ‘std::basic_ostream<char>’}) to type ‘std::byte’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |     ~~~~~~~~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:339:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const error_code&)’
  339 |     operator<<(basic_ostream<_CharT, _Traits>& __os, const error_code& __e)
      |     ^~~~~~~~
/usr/include/c++/13/system_error:339:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘const std::error_code&’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:554:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, _CharT)’
  554 |     operator<<(basic_ostream<_CharT, _Traits>& __out, _CharT __c)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:554:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   deduced conflicting types for parameter ‘_CharT’ (‘char’ and ‘std::vector<ResultItem>’)
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:564:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, char)’
  564 |     operator<<(basic_ostream<_CharT, _Traits>& __out, char __c)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:564:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘char’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:570:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, char)’
  570 |     operator<<(basic_ostream<char, _Traits>& __out, char __c)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:570:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘char’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:581:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, signed char)’
  581 |     operator<<(basic_ostream<char, _Traits>& __out, signed char __c)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:581:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘signed char’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:586:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, unsigned char)’
  586 |     operator<<(basic_ostream<char, _Traits>& __out, unsigned char __c)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:586:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘unsigned char’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:595:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, wchar_t)’ (deleted)
  595 |     operator<<(basic_ostream<char, _Traits>&, wchar_t) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:595:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘wchar_t’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:600:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, char8_t)’ (deleted)
  600 |     operator<<(basic_ostream<char, _Traits>&, char8_t) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:600:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘char8_t’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:605:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, char16_t)’ (deleted)
  605 |     operator<<(basic_ostream<char, _Traits>&, char16_t) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:605:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘char16_t’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:609:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, char32_t)’ (deleted)
  609 |     operator<<(basic_ostream<char, _Traits>&, char32_t) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:609:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘char32_t’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:615:5: note: candidate: ‘template<class _Traits> std::basic_ostream<wchar_t, _Traits>& std::operator<<(basic_ostream<wchar_t, _Traits>&, char8_t)’ (deleted)
  615 |     operator<<(basic_ostream<wchar_t, _Traits>&, char8_t) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:615:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   mismatched types ‘wchar_t’ and ‘char’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:620:5: note: candidate: ‘template<class _Traits> std::basic_ostream<wchar_t, _Traits>& std::operator<<(basic_ostream<wchar_t, _Traits>&, char16_t)’ (deleted)
  620 |     operator<<(basic_ostream<wchar_t, _Traits>&, char16_t) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:620:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   mismatched types ‘wchar_t’ and ‘char’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:624:5: note: candidate: ‘template<class _Traits> std::basic_ostream<wchar_t, _Traits>& std::operator<<(basic_ostream<wchar_t, _Traits>&, char32_t)’ (deleted)
  624 |     operator<<(basic_ostream<wchar_t, _Traits>&, char32_t) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:624:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   mismatched types ‘wchar_t’ and ‘char’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:645:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const _CharT*)’
  645 |     operator<<(basic_ostream<_CharT, _Traits>& __out, const _CharT* __s)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:645:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   mismatched types ‘const _CharT*’ and ‘std::vector<ResultItem>’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/bits/ostream.tcc:307:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const char*)’
  307 |     operator<<(basic_ostream<_CharT, _Traits>& __out, const char* __s)
      |     ^~~~~~~~
/usr/include/c++/13/bits/ostream.tcc:307:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘const char*’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:662:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const char*)’
  662 |     operator<<(basic_ostream<char, _Traits>& __out, const char* __s)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:662:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘const char*’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:675:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const signed char*)’
  675 |     operator<<(basic_ostream<char, _Traits>& __out, const signed char* __s)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:675:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘const signed char*’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:680:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const unsigned char*)’
  680 |     operator<<(basic_ostream<char, _Traits>& __out, const unsigned char* __s)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:680:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘const unsigned char*’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:689:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const wchar_t*)’ (deleted)
  689 |     operator<<(basic_ostream<char, _Traits>&, const wchar_t*) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:689:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘const wchar_t*’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:694:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const char8_t*)’ (deleted)
  694 |     operator<<(basic_ostream<char, _Traits>&, const char8_t*) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:694:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘const char8_t*’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:699:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const char16_t*)’ (deleted)
  699 |     operator<<(basic_ostream<char, _Traits>&, const char16_t*) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:699:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘const char16_t*’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:703:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const char32_t*)’ (deleted)
  703 |     operator<<(basic_ostream<char, _Traits>&, const char32_t*) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:703:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   cannot convert ‘result’ (type ‘std::vector<ResultItem>’) to type ‘const char32_t*’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:709:5: note: candidate: ‘template<class _Traits> std::basic_ostream<wchar_t, _Traits>& std::operator<<(basic_ostream<wchar_t, _Traits>&, const char8_t*)’ (deleted)
  709 |     operator<<(basic_ostream<wchar_t, _Traits>&, const char8_t*) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:709:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   mismatched types ‘wchar_t’ and ‘char’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:714:5: note: candidate: ‘template<class _Traits> std::basic_ostream<wchar_t, _Traits>& std::operator<<(basic_ostream<wchar_t, _Traits>&, const char16_t*)’ (deleted)
  714 |     operator<<(basic_ostream<wchar_t, _Traits>&, const char16_t*) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:714:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   mismatched types ‘wchar_t’ and ‘char’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:718:5: note: candidate: ‘template<class _Traits> std::basic_ostream<wchar_t, _Traits>& std::operator<<(basic_ostream<wchar_t, _Traits>&, const char32_t*)’ (deleted)
  718 |     operator<<(basic_ostream<wchar_t, _Traits>&, const char32_t*) = delete;
      |     ^~~~~~~~
/usr/include/c++/13/ostream:718:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36: note:   mismatched types ‘wchar_t’ and ‘char’
   56 |     std::cout << std::boolalpha << result << std::endl;
      |                                    ^~~~~~
/usr/include/c++/13/ostream:801:5: note: candidate: ‘template<class _Ostream, class _Tp> _Ostream&& std::operator<<(_Ostream&&, const _Tp&)’
  801 |     operator<<(_Ostream&& __os, const _Tp& __x)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:801:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/ostream: In substitution of ‘template<class _Ostream, class _Tp> _Ostream&& std::operator<<(_Ostream&&, const _Tp&) [with _Ostream = std::basic_ostream<char>&; _Tp = std::vector<ResultItem>]’:
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36:   required from here
/usr/include/c++/13/ostream:801:5: error: template constraint failure for ‘template<class _Os, class _Tp>  requires (__derived_from_ios_base<_Os>) && requires(_Os& __os, const _Tp& __t) {__os << __t;} using std::__rvalue_stream_insertion_t = _Os&&’
/usr/include/c++/13/ostream:801:5: note: constraints not satisfied
/usr/include/c++/13/ostream: In substitution of ‘template<class _Os, class _Tp>  requires (__derived_from_ios_base<_Os>) && requires(_Os& __os, const _Tp& __t) {__os << __t;} using std::__rvalue_stream_insertion_t = _Os&& [with _Os = std::basic_ostream<char>&; _Tp = std::vector<ResultItem>]’:
/usr/include/c++/13/ostream:801:5:   required by substitution of ‘template<class _Ostream, class _Tp> _Ostream&& std::operator<<(_Ostream&&, const _Tp&) [with _Ostream = std::basic_ostream<char>&; _Tp = std::vector<ResultItem>]’
/workspace/mochi/tests/transpiler/x/cpp/group_by_conditional_sum.cpp:56:36:   required from here
/usr/include/c++/13/ostream:768:13:   required for the satisfaction of ‘__derived_from_ios_base<_Os>’ [with _Os = std::basic_ostream<char, std::char_traits<char> >&]
/usr/include/c++/13/ostream:768:39: note: the expression ‘is_class_v<_Tp> [with _Tp = std::basic_ostream<char, std::char_traits<char> >&]’ evaluated to ‘false’
  768 |     concept __derived_from_ios_base = is_class_v<_Tp>
      |                                       ^~~~~~~~~~~~~~~
